tfaddonsdef/sample/ingress/alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing  # ExternalLB (or InternalLB)
    alb.ingress.kubernetes.io/target-type: instance  # Target Group's Target Type
    alb.ingress.kubernetes.io/load-balancer-name: alb-ingress  # Load Balancer Name
    ## Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    ## SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:117612009356:certificate/55cfe82d-1f38-473b-b8e9-cbd4f5bb34d5
    external-dns.alpha.kubernetes.io/hostname: www.lishprj.link,web.lishprj.link
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx-np-svc
              port:
                number: 80
