tfaddonsdef/sample/ingress/test-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/load-balancer-name: alb-ingress  # Load Balancer Name
    external-dns.alpha.kubernetes.io/hostname: www.lishprj.link,web.lishprj.link
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx-np-svc
              port:
                number: 80
